--- a/app/src/main/res/layout/info_screen.xml
+++ b/app/src/main/res/layout/info_screen.xml
@@ -110,7 +110,24 @@ android:layout_height="match_parent">
                     android:layout_marginTop="8dp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:text="Scores"
+            android:textColor="@color/darkText"
+            android:textSize="20sp"
+            android:layout_marginTop="4dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:text="Walk, transit, and bike scores measure  transit accessibility on a scale from 0 - 100. "
+            android:textColor="@color/secondaryText"
+            android:textSize="14sp"
+            android:layout_marginTop="4dp"
+            android:paddingBottom="16dp"/>
         <!-- Biking Card -->
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
@@ -324,14 +341,7 @@ android:layout_height="match_parent">
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:text="Walk, transit, and bike scores measure  transit accessibility on a scale from 0 - 100. "
-            android:textColor="@color/secondaryText"
-            android:textSize="14sp"
-            android:layout_marginTop="4dp" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/walkscoreLink"
             android:layout_width="wrap_content"
