--- a/app/src/main/res/layout/activity_hotel_info.xml
+++ b/app/src/main/res/layout/activity_hotel_info.xml
@@ -11,6 +11,7 @@
 
     <!-- Toolbar -->
     <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/bkgSection"
