--- a/app/src/main/res/layout/hotel.xml
+++ b/app/src/main/res/layout/hotel.xml
@@ -43,7 +43,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:padding="16dp"
+                android:background="@color/bkgSection">
+
 
                 <!-- Row: Image, Title, Rating, Price -->
                 <LinearLayout
