--- a/app/src/main/res/layout/activity_neighorhoods.xml
+++ b/app/src/main/res/layout/activity_neighorhoods.xml
@@ -23,6 +23,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ScrollView
+        android:id="@+id/scrollViewTransit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
     <!-- Card Container -->
     <LinearLayout
         android:id="@+id/cardContainerTransit"
@@ -30,6 +39,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
+
 
 
         <!-- Downtown Tucson Card -->
@@ -386,6 +396,9 @@
 
 
 
+
+
     </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
