--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,5 +6,6 @@
         <item name="colorPrimaryVariant">#000000</item>
         <item name="colorOnPrimary">#000000</item>
         <item name="searchViewStyle">@style/SearchViewStyle</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
