--- a/app/src/main/res/layout/activity_hotel_info_2.xml
+++ b/app/src/main/res/layout/activity_hotel_info_2.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bkgSurface"
-    tools:context=".HotelInfo">
+    tools:context=".HotelInfo"
+    android:paddingBottom="24dp">
 
     <!-- Toolbar -->
     <com.google.android.material.appbar.MaterialToolbar
@@ -80,21 +81,23 @@
             android:weightSum="2"
             android:paddingHorizontal="16dp">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingRight="8dp"
                 android:src="@drawable/hotel_outside2"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                app:shapeAppearanceOverlay="@style/RoundedImageView" />
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:src="@drawable/hotel_inside2"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                app:shapeAppearanceOverlay="@style/RoundedImageView" />
         </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
@@ -261,7 +264,8 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ac" />
+                android:src="@drawable/breakfast"
+                app:tint="@color/darkText"/>
 
             <TextView
                 android:layout_width="wrap_content"
