--- a/app/src/main/res/layout/activity_hotel_info.xml
+++ b/app/src/main/res/layout/activity_hotel_info.xml
@@ -581,6 +581,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="48dp"
             >
 
             <com.google.android.material.card.MaterialCardView
@@ -596,7 +597,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingHorizontal="16dp"
-                    android:paddingVertical="12dp">
+                    android:paddingVertical="12dp"
+                    >
 
                     <!-- First Line -->
                     <TextView
