--- a/app/src/main/res/layout/activity_hotel_info_2.xml
+++ b/app/src/main/res/layout/activity_hotel_info_2.xml
@@ -7,8 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bkgSurface"
-    tools:context=".HotelInfo"
-    android:paddingBottom="24dp">
+    tools:context=".HotelInfo">
 
     <!-- Toolbar -->
     <com.google.android.material.appbar.MaterialToolbar
@@ -587,6 +586,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="48dp"
             >
 
             <com.google.android.material.card.MaterialCardView
@@ -602,7 +602,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingHorizontal="16dp"
-                    android:paddingVertical="12dp">
+                    android:paddingVertical="12dp"
+                    >
 
                     <!-- First Line -->
                     <TextView
